test_data/neg/ss/655294/Windows/655294.ss3_simp.rtf
>655294
MELVKVVFMGWFKNESMFTKEITMMKDDVQWATTQYAEVNKALVKAFIDDKKVCEVDCRG
CCCCEEEEEEEECCCCEEEEEEEEEHHHHHHHHHHHHHHHHHHHHHHHCCCCCCCCCCCC
